[package]
name = "erbium"
version = "0.2.4"
authors = ["Perry Lorier <git@isomer.meta.net.nz>"]
edition = "2018"
default-run = "erbium"
description = "Network services for small/home networks"
license = "Apache-2.0"
repository = "https://github.com/isomer/erbium.git"
build = "src/build.rs"

[dependencies]
async-std = { version = "1.6.2", features = ["tokio02"] }
bytes = "0.6.0"
futures = "0.3.5"
futures-core = "0.3.5"
futures-sink = "0.3.5"
hostname = { version = "0.3" }
mio = { version = "0.7" }
netlink-packet-route = "0.5"
netlink-sys = { version="0.4", features=["tokio_socket"] }
nix = { version = "0.18" }
rand = "0.7.3"
rusqlite = { version = "0.23" }
tokio-compat-02 = "0.1"
tokio-util = { version="0.5", features= ["codec"] }
tokio = { version = "0.3", features = ["full"] }
yaml-rust = { version = "0.4" }

[lib]
name = "erbium"
path = "src/lib.rs"

[profile.release]
lto = "fat"
codegen-units = 1

[build-dependencies]
vergen = "3"
