[package]
name = "erbium"
version = "0.2.9"
authors = ["Perry Lorier <git@isomer.meta.net.nz>"]
edition = "2018"
default-run = "erbium"
description = "Network services for small/home networks"
license = "Apache-2.0"
repository = "https://github.com/isomer/erbium.git"
build = "src/build.rs"
homepage = "https://github.com/isomer/erbium"

[features]
full=["dhcp", "radv", "http", "dns"]
default=["dhcp", "radv", "http", "dns"]
dhcp=[]
dns=[] # Partially complete, not ready for use.
radv=[]
http=["hyper", "dhcp"] # Currently can't compile http without dhcp.

[dependencies]
arbitrary = { version = "0.4", features = [ "derive" ]}
async-std = { version = "1.6.2", features = ["tokio02"] }
async-trait = { version = "0.1.42" }
rust-crypto = { version = "0.2.36" }
bytes = "1.0"
env_logger = "0.8.2"
futures = "0.3.8"
futures-core = "0.3.5"
futures-sink = "0.3.5"
hostname = { version = "0.3" }
hyper = { version = "0.14.0-dev", features=["server", "http1", "stream", "runtime", "tcp"], optional=true }
lazy_static = "1.4"
log = "0.4"
mio = { version = "0.7" }
netlink-packet-route = "0.7"
netlink-sys = { version="0.6", features=["tokio_socket"] }
nix = { version = "0.20" }
prometheus = { version="0.12", features=["process"] }
rand = "0.8"
rusqlite = { version = "0.24" }
tokio-compat-02 = "0.2"
tokio-util = { version="0.6", features= ["codec"] }
tokio = { version = "1.0", features = ["full"] }
yaml-rust = { version = "0.4" }

[[bin]]
name="erbium-dns"
required-features=["dns"]

[[bin]]
name="erbium-dhcp"
required-features=["dhcp"]

[lib]
name = "erbium"
path = "src/lib.rs"

[profile.release]
lto = "fat"
codegen-units = 1

[build-dependencies]
vergen = "4"

