[package]
name = "erbium-core"
authors = ["Perry Lorier <git@isomer.meta.net.nz>"]
edition = "2021"
description = "Network services for small/home networks - Core code"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/isomer/erbium.git"
homepage = "https://github.com/isomer/erbium"
version.workspace = true

[features]
full=["dhcp", "radv", "http", "dns"]
default=["dhcp", "radv", "http", "dns"]
dhcp=[]
dns=[] # Partially complete, not ready for use.
radv=[]
http=["hyper", "dhcp"] # Currently can't compile http without dhcp.
static=["rusqlite/bundled"] # Statically link dependencies.
fuzzing=["arbitrary"] # add arbitrary dependancy.

[dependencies]
arbitrary = { version = "0.4.7", features = ["derive"], optional=true}
async-trait = { version = "0.1.42" }
byteorder = "1.4.3"
bytes = "1.0"
digest = "0.10.3"
env_logger = "0.10"
erbium-net = { path = "../erbium-net" }
futures = "0.3.8"
hmac = "0.12.1"
hyper = { version = "0.14.5", features=["server", "http1", "stream", "runtime", "tcp"], optional=true }
lazy_static = "1.4"
log = "0.4"
prometheus = { version="0.13", features=["process"] }
rand = "0.8"
rusqlite = { version = ">=0.28, <=0.29" }
sha2 = "0.10"
tokio-util = { version="0.7", features= ["codec"] }
tokio = { version = "1.8.4", features = ["full"] }
yaml-rust = { version = "0.4" }

[[bin]]
name="erbium-dns"
required-features=["dns"]

[[bin]]
name="erbium-dhcp"
required-features=["dhcp"]

[[bin]]
name="erbium-lldp"
#required-features=["lldp"]

[lib]
name = "erbium"
path = "src/lib.rs"

[build-dependencies]
vergen = ">=6,<=8"

