[package]
name = "erbium-net"
authors = ["Perry Lorier <git@isomer.meta.net.nz>"]
edition = "2021"
description = "Network services for small/home networks - Low level networking abstractions"
version.workspace = true

[dependencies]
bytes = { version = ">=1.2" }
futures = "0.3.8"
log = "0.4"
mio = { version = "0.8", features=["net", "os-poll"] }
netlink-packet-core = ">=0.4, <=0.5"
netlink-packet-route = ">=0.12, <=0.15"
netlink-sys = { version="0.8", features=["tokio_socket"] }
nix = { version = "0.26", features=["net"] }
tokio = { version = "1.8.4", features = ["full"] }

